2003-02-18  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/fortran/fortran.c: Regen.
	* parsers/fortran/fortran.y: Add patch from
	bug report 658664 to fix error generated by
	bison 1.75.

2003-02-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* patches/README.TXT:
	* patches/tk_select.patch: Remove last patch
	and README.TXT file.

2003-02-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* patches/libgui_print.patch: Remove libgui patch
	since it was just added to the libgui CVS.

2003-02-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* patches/itk_component.patch: Remove itk patch
	since it was just added to the itk CVS.

2003-02-17  Ian Roxborough  <irox@ix.netcom.com>

	* gui/text.tcl (tkTextUndoPop): When they are no
	more undo operations on the undo stack, tell the
	editor to reset the modified status to unmodified.

2003-02-17  Ian Roxborough  <irox@ix.netcom.com>

	* gui/projmng.tcl (sn_select_project): On a
	Double click, don't invoke the open project
	proc until a ButtonRelease event is received.
	
2003-02-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen to account for --enable-symbols
	fixes.
	* parsers/assembly/ppc601-eabi/configure: Ditto.

2003-02-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* INSTALL.TXT: Document building with Msys+Mingw.
	Update Cygwin with VC++ build process and include
	note about broken grep and how to work around it.
	Remove instructions that set CC and CFLAGS before
	running configure since that is no longer needed.
	* configure: Regen.
	* configure.in: Set CC and CFLAGS to support
	building with VC++.
	* db/Makefile.am: Don't pass CFLAGS to linker
	since that makes no sense and results in
	warnings from the linker. Don't set CFLAGS
	in a conditional block, the CFLAGS settings
	need to come from configure.
	* db/Makefile.in: Regen.
	* hyper/Makefile.am: Don't pass CFLAGS to the
	linker.
	* hyper/Makefile.in: Regen.
	* parsers/assembly/ppc601-eabi/configure: Regen.